--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<div>
-  <router-outlet></router-outlet>
+<div class="app-container" [ngClass]="{'sidebar-collapsed': !sidebarState()}">
+  <app-side-bar
+    class="c-sidebar"
+    [sidebarStatus]="sidebarState()"
+    (toggle)="sidebarState.set($event)"></app-side-bar>
+  <main class="c-main"><router-outlet></router-outlet></main>
 </div>
