--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -4,12 +4,12 @@ $font-medium: 'poppins-medium', sans-serif; // 500
 $font-semibold: 'poppins-semibold', sans-serif; // 600
 
 // Base
-$base: #ffffff;
-$base2: #9ecc36;
-$base3: #77a918;
-$baseT: #4a4848;
+$base: #396AFF;
+$base2: #0A8DC4;
+$base3: #62BAB8;
+$baseT: #eaecf1;
 $border-color: #8bb53c;
-$font: #262a41;
+$font: #d2daf5;
 
 // Colors
 $black: #545454;
