--- a/src/app/shared/components/side-bar/side-bar.component.scss
+++ b/src/app/shared/components/side-bar/side-bar.component.scss
@@ -2,12 +2,12 @@
 @import 'mixins';
 
 .mobile-sidebar {
-  position: fixed; /* Siempre visible en la parte inferior */
+  position: fixed;
   bottom: 0;
   left: 0;
   width: 100%;
   background-color: $base;
-  z-index: 1000; /* Asegurarse de que esté por encima de otros elementos */
+  z-index: 1000;
 
   @include md(){
     border-right: 1px solid rgb(231, 229, 229);
@@ -18,6 +18,7 @@
     width: 150px;
     bottom: auto;
     flex-direction: column;
+    height: 100%;
 
     &.sidebar-collapsed {
       width: 50px !important;
@@ -31,7 +32,7 @@
     .icon-list {
       flex-direction: column;
       height: 100%;
-      justify-content: center;
+      justify-content: space-around;
       align-items: stretch;
       padding-bottom: 180px;
 
@@ -61,55 +62,6 @@
   list-style: none;
   padding: 15px 0;
   margin: 0;
-
-  li {
-    width: 33.33%; /* ajustar el valor según la cantidad de iconos */
-    text-align: center;
-
-    a {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-decoration: none;
-      color: $baseT;
-    }
-
-    .material-symbols-rounded {
-      font-size: 24px;
-      margin-bottom: 5px;
-      @include xl(){
-        font-size: 1.4vw;
-      }
-    }
-
-    span {
-      font-size: 12px;
-      color: #000;
-      @include xl(){
-        font-size: 0.9vw;
-      }
-    }
-  }
-
-  .colorize {
-    color: #000000 !important;
-
-    &_blue {
-      color: #234FA2 !important;
-    }
-
-    &_red {
-      color: #D61A1A !important;
-    }
-
-    &_yellow {
-      color: #F7E523 !important;
-    }
-
-    &_green {
-      color: #429c21 !important;
-    }
-  }
 }
 
 .c-sidebar{
@@ -127,4 +79,49 @@ button {
 }
 .no-mobile{
   display: none;
+  color: $font;
+  cursor: pointer;
+}
+
+
+.div-list {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  list-style: none;
+  padding: 15px 0;
+  margin: 0;
+  width: 100%;
+  @include md(){
+    display: block;
+  }
+  li {
+    width: 33.33%;
+    text-align: center;
+
+    a {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-decoration: none;
+      color: $baseT;
+    }
+
+    .material-symbols-rounded {
+      font-size: 24px;
+      margin-bottom: 5px;
+      color: $font;
+      @include xl(){
+        font-size: 1.4vw;
+      }
+    }
+
+    span {
+      font-size: 12px;
+      color: $font;
+      @include xl(){
+        font-size: 0.9vw;
+      }
+    }
+  }
 }
