--- a/src/app/feature/login/components/modal-login/modal-login.component.scss
+++ b/src/app/feature/login/components/modal-login/modal-login.component.scss
@@ -9,12 +9,10 @@
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Sombra sutil */
   position: absolute; /* Aseguramos que pueda flotar */
   z-index: 1000; /* Sobre otros elementos */
-  right: 20px;
-  bottom: -300px;
 
   @include md(){
-    right: 20px;
-    bottom: -250px;
+    left: 150px;
+    top: 0px;
     width: 300px;
   }
   h2 {
