--- a/src/app/shared/components/side-bar/side-bar.component.scss
+++ b/src/app/shared/components/side-bar/side-bar.component.scss
@@ -76,6 +76,10 @@
 
 button {
   all: unset;
+  display: block;
+  width: 100%;
+  height: 100%;
+  -webkit-tap-highlight-color: transparent;
 }
 .no-mobile{
   display: none;
