--- a/src/app/shared/components/side-bar/side-bar.component.scss
+++ b/src/app/shared/components/side-bar/side-bar.component.scss
@@ -1,4 +1,3 @@
-@import 'settings';
 @import 'mixins';
 
 .mobile-sidebar {
@@ -62,6 +61,7 @@
   list-style: none;
   padding: 15px 0;
   margin: 0;
+  height: 50px;
 }
 
 .c-sidebar{
