--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -8,7 +8,7 @@ $base: #396AFF;
 $base2: #0A8DC4;
 $base3: #62BAB8;
 $baseT: #eaecf1;
-$border-color: #8bb53c;
+$border-color: #549ebe;
 $font: #d2daf5;
 
 // Colors
