--- a/src/app/feature/home/pages/home/home.component.html
+++ b/src/app/feature/home/pages/home/home.component.html
@@ -13,6 +13,6 @@
     </form>
   </div>
   <div class="map-container">
-    <app-maps></app-maps>
+    <app-maps [originCoordinates]="originCoordinates" [destinationCoordinates]="destinationCoordinates"></app-maps>
   </div>
 </div>
