--- a/src/app/feature/home/pages/home/home.component.scss
+++ b/src/app/feature/home/pages/home/home.component.scss
@@ -23,9 +23,11 @@
     .form-busqueda{
       padding: 20px;
       box-shadow: 0 1px 2px rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15);
+      border-top-right-radius: 12px;
+      border-bottom-right-radius: 12px;
     }
   }
-  
+
 }
 
 .input-group {
