--- a/src/app/feature/home/pages/home/home.component.html
+++ b/src/app/feature/home/pages/home/home.component.html
@@ -1,3 +1,18 @@
 <div class="c-home">
-  <app-maps></app-maps>
+  <div class="content-busqueda">
+    <form class="form-busqueda" (ngSubmit)="searchRoute()">
+      <div class="input-group">
+        <label for="origin">Origen</label>
+        <input type="text" id="origin" #originInput [(ngModel)]="origin" name="origin" required />
+      </div>
+      <div class="input-group">
+        <label for="destination">Destino</label>
+        <input type="text" id="destination" #destinationInput [(ngModel)]="destination" name="destination" required />
+      </div>
+      <button type="submit">Buscar Ruta</button>
+    </form>
+  </div>
+  <div class="map-container">
+    <app-maps [originCoordinates]="originCoordinates" [destinationCoordinates]="destinationCoordinates"></app-maps>
+  </div>
 </div>
