--- a/src/app/feature/home/components/search-container/search-container.component.html
+++ b/src/app/feature/home/components/search-container/search-container.component.html
@@ -1,10 +1,32 @@
 <div class="search-history">
-  <h3>Historial de Búsquedas</h3>
+  <h3>Búsquedas recientes</h3>
   <ul>
     <li *ngFor="let history of searchHistory">
-      <div>
-        <span class="route">{{ history.origin }} → {{ history.destination }}</span>
-        <span class="time">{{ history.duration }}</span>
+      <div class="history-container">
+        <div class="search-history_section">
+          <div class="headertext">
+            <span>Origen</span>
+          </div>
+          <div class="route">
+            <span>{{ history.origin }}</span>
+          </div>
+        </div>
+        <div class="search-history_section">
+          <div class="headertext">
+            <span>Destino</span>
+          </div>
+          <div class="route">
+            <span>{{ history.destination }}</span>
+          </div>
+        </div>
+        <div class="search-history_section">
+          <div class="headertext">
+            <span>Tiempo</span>
+          </div>
+          <div class="route">
+            <span>{{ history.duration }}</span>
+          </div>
+        </div>
       </div>
     </li>
   </ul>
