--- a/src/app/feature/graficos/pages/graficos/graficos.component.html
+++ b/src/app/feature/graficos/pages/graficos/graficos.component.html
@@ -1,1 +1,9 @@
-<p>graficos works!</p>
+<div class="app-container">
+    <header>
+      <h1>Dashboard de Crímenes</h1>
+    </header>
+    
+    <main>
+      <app-graficos></app-graficos>
+    </main>
+  </div>
