--- a/src/app/feature/home/components/search-container/search-container.component.html
+++ b/src/app/feature/home/components/search-container/search-container.component.html
@@ -21,6 +21,14 @@
         </div>
         <div class="search-history_section">
           <div class="headertext">
+            <span>Safety</span>
+          </div>
+          <div class="route">
+            <span>{{ history.safe | percent:'0.0-0' }}</span>
+          </div>
+        </div>
+        <div class="search-history_section">
+          <div class="headertext">
             <span>Tiempo</span>
           </div>
           <div class="route">
