--- a/src/app/feature/historial/pages/historial/historial.component.scss
+++ b/src/app/feature/historial/pages/historial/historial.component.scss
@@ -2,6 +2,11 @@
   padding: 20px;
   max-width: 800px;
   margin: 0 auto;
+  max-height: 100vh;
+  overflow-y: auto;
+  /* Estilos para el desplazamiento */
+  scrollbar-width: thin; /* Ancho del scroll para navegadores compatibles */
+  scrollbar-color: #f0f0f0; /* Colores para la barra de desplazamiento */
 
   h2 {
     text-align: center;
