--- a/src/app/feature/graficos/pages/graficos/graficos.component.html
+++ b/src/app/feature/graficos/pages/graficos/graficos.component.html
@@ -1,18 +1,86 @@
-<div class="chart-container">
-  <div class="chart-header">
-    <div class="chart-title">
-      <h5>Website Traffic</h5>
+<div class="container-main-chart">
+  <div class="chart-container">
+    <div class="chart-header">
+      <div class="chart-title">
+        <h5>Website Traffic</h5>
+      </div>
+    </div>
+
+    <div class="chart-body">
+      <div id="pie-chart" class="chart"></div>
+    </div>
+
+    <!-- Footer -->
+    <div class="dropdown">
+      <button
+        class="dropdown-button"
+        (click)="toggleDropdownPie()"
+        type="button">
+        Last 7 days
+        <svg class="dropdown-icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1l4 4 4-4" />
+        </svg>
+      </button>
+
+      <div
+        id="lastDaysdropdown"
+        class="dropdown-menu"
+        [class.hidden]="!isDropdownVisiblePie">
+        <ul>
+          <li><a href="#">Yesterday</a></li>
+          <li><a href="#">Today</a></li>
+          <li><a href="#">Last 7 days</a></li>
+          <li><a href="#">Last 30 days</a></li>
+          <li><a href="#">Last 90 days</a></li>
+        </ul>
+      </div>
     </div>
   </div>
 
-  <div class="chart-body">
-    <div id="pie-chart" class="chart"></div>
+  <div class="chart-container">
+    <!-- Header -->
+    <div class="chart-header">
+      <div>
+        <h5 class="chart-title">32.4k</h5>
+        <p class="text-muted">Users this week</p>
+      </div>
+      <div class="chart-percentage">
+        12%
+        <svg class="icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 14">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13V1m0 0L1 5m4-4 4 4" />
+        </svg>
+      </div>
+    </div>
+
+    <!-- Chart Area -->
+    <div id="area-chart" class="chart"></div>
+
+    <!-- Footer -->
+    <div class="dropdown">
+      <button
+        class="dropdown-button"
+        (click)="toggleDropdownLine()"
+        type="button">
+        Last 7 days
+        <svg class="dropdown-icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1l4 4 4-4" />
+        </svg>
+      </button>
+
+      <div
+        id="lastDaysdropdown"
+        class="dropdown-menu"
+        [class.hidden]="!isDropdownVisibleLine">
+        <ul>
+          <li><a href="#">Yesterday</a></li>
+          <li><a href="#">Today</a></li>
+          <li><a href="#">Last 7 days</a></li>
+          <li><a href="#">Last 30 days</a></li>
+          <li><a href="#">Last 90 days</a></li>
+        </ul>
+      </div>
+    </div>
+
   </div>
 
-  <div class="chart-footer">
-    <button class="dropdown-button">Last 7 days</button>
-    <a href="#" class="traffic-analysis-button">
-      Traffic analysis
-    </a>
-  </div>
 </div>
