grafico de linea funcional

--- a/src/app/feature/graficos/pages/graficos/graficos.component.html
+++ b/src/app/feature/graficos/pages/graficos/graficos.component.html
@@ -14,7 +14,7 @@
     <div class="dropdown">
       <button
         class="dropdown-button"
-        (click)="toggleDropdownPie()"
+        (click)="toggleDropdown('pie')"
         type="button">
         Last 7 days
         <svg class="dropdown-icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
@@ -59,7 +59,7 @@
     <div class="dropdown">
       <button
         class="dropdown-button"
-        (click)="toggleDropdownLine()"
+        (click)="toggleDropdown('line')"
         type="button">
         Last 7 days
         <svg class="dropdown-icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
