--- a/src/app/feature/graficos/pages/graficos/graficos.component.scss
+++ b/src/app/feature/graficos/pages/graficos/graficos.component.scss
@@ -117,7 +117,7 @@
       padding: 0;
       margin: 0;
 
-      li a {
+      li{
         display: block;
         padding: 0.5rem 1rem;
         text-decoration: none;
