*Solucion del problema reportado al minimizar los gráficos *Se adicionó el responsive

--- a/src/app/feature/graficos/pages/graficos/graficos.component.scss
+++ b/src/app/feature/graficos/pages/graficos/graficos.component.scss
@@ -2,16 +2,27 @@
   overflow-y: auto;
   overflow-x: hidden;
   height: 100vh;
-  margin-left: 8px;
-  padding-right: 8px;
+  padding-bottom: 50px;
+  @media (min-width: 768px) {
+    padding-bottom: 0px;
+    margin-left: 8px;
+    padding-right: 8px;
+  }
 }
 .group-chart{
-  display: flex;
+  display: block;
   column-gap: 8px;
   margin-bottom: 8px;
+  max-width: 99%;
+  @media (min-width: 1024px) {
+    display: flex;
+  }
 }
 .pai{
-  max-width: 450px;
+  max-width: 100%;
+  @media (min-width: 1024px) {
+    max-width: 450px;
+  }
 }
 .chart-container {
   width: 100%;
@@ -19,10 +30,8 @@
   border-radius: 0.5rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   padding: 1rem;
+  overflow: hidden;
 
-  .line{
-    max-width: 800px;
-  }
 
   .chart-header {
     display: flex;
@@ -161,4 +170,11 @@
       display: none;
     }
   }
+}
+
+.chart-content{
+  max-width: 99%;
+}
+.line{
+  max-width: 99%;
 }
