--- a/src/app/feature/historial/pages/historial/historial.component.scss
+++ b/src/app/feature/historial/pages/historial/historial.component.scss
@@ -14,14 +14,11 @@
     margin-bottom: 20px;
   }
 
-  .loading-spinner,
-  .error-message,
-  .no-history {
-    text-align: center;
-    font-size: 18px;
-    color: #d61a1a;
-    margin-top: 20px;
-  }
+.loading-spinner{
+  display: flex;
+  justify-content: center; /* Centrado horizontal */
+  align-items: center;     /* Centrado vertical */
+}
 
   .history-list {
     list-style: none;
