--- a/src/app/feature/historial/pages/historial/historial.component.html
+++ b/src/app/feature/historial/pages/historial/historial.component.html
@@ -1,5 +1,5 @@
 <div class="historial-container">
-  <h2>Historial de Rutas</h2>
+  <h2>History of routes</h2>
 
   <!-- Mostrar un spinner mientras se cargan los datos -->
   <div *ngIf="isLoading" class="loading-spinner">
@@ -13,16 +13,22 @@
   <!-- Mostrar un mensaje de error si ocurre algún problema -->
   <div *ngIf="!isLoading && errorMessage" class="error-message">
     <p>{{ errorMessage }}</p>
+
+    <svg class="block-svg" viewBox="0 0 1000 1000" xmlns="http://www.w3.org/2000/svg" xml:space="preserve">
+      <path d="M267.44 12.68c-3.44 2.49-3.44 4.79-1.34 63.55 1.34 39.43 1.34 62.02.19 64.31-3.44 6.51-10.14 6.12-23.73-1.34-10.91-6.13-13.4-6.89-17.42-4.98-2.68 1.15-5.17 3.25-5.74 4.79-.57 1.53 4.98 31.39 12.44 66.04l13.59 63.36v115.8l9.38 27.95c5.17 15.31 12.25 33.5 15.5 40.2 17.42 34.84 46.7 68.52 76.18 88.05 15.7 10.15 15.89 10.34 14.93 17.04-.57 3.64-1.15 8.61-1.15 10.72 0 4.02-1.15 4.21-29.09 5.17-22.78.77-32.35 1.91-42.68 5.17-18.18 5.74-37.71 17.42-50.15 30.43-16.85 17.58-105.28 135.68-112.55 150.42-11.29 22.59-12.44 30.82-12.44 82.3 0 34.84.77 48.81 2.87 57.42 8.23 32.54 32.16 62.21 62.02 77.14 25.07 12.63 23.16 15.5 23.16-35.98 0-48.23.57-51.68 10.91-58.95 8.8-6.13 16.46-6.89 26.22-2.49 15.89 6.89 16.46 9.19 16.46 63.74V990h375.16v-47.47c0-43.45.38-47.85 3.83-53.4 7.47-12.44 20.1-16.27 33.31-10.33 15.89 6.89 16.46 9.19 16.46 63.54v47.09l10.53-1.72c36.75-5.74 70.63-31.2 86.9-65.27 11.48-24.31 12.63-31.2 12.63-79.82 0-34.64-.77-45.55-3.45-55.51-4.4-16.84-14.93-37.13-25.65-49.77l-9-10.53h-31.77c-27.18 0-33.88-.57-47.85-4.4-65.47-17.99-116-69.67-132.46-135.51-6.13-25.27-5.93-63.55.96-89 5.36-20.67 16.65-44.79 29.09-62.01 16.27-22.78 47.28-48.43 71.01-58.76l10.34-4.4V281.8c0-100.1-.19-101.83-12.06-126.33-8.42-17.42-32.35-41.34-49.38-49.38-24.12-11.48-27.75-11.87-110.82-12.06h-75.61L390.9 72.78c-9-11.67-18.57-22.97-21.44-25.07-4.79-3.64-5.36-3.64-9.95-.57-2.68 1.72-4.98 4.59-4.98 6.51 0 4.98-3.83 8.04-9.76 8.04-3.83 0-13.4-6.7-36.37-25.84-17.23-14.16-32.73-25.84-34.26-25.84-1.72-.01-4.78 1.14-6.7 2.67z"/>
+      <path
+      d="M713.8 394.92c-17.04 2.49-41.73 11.68-57.42 21.63-8.61 5.36-20.48 15.31-29.86 25.27-30.43 32.16-44.98 75.6-40.19 119.44 4.98 44.41 29.86 85.56 67.18 110.25 67.38 44.98 159.25 27.18 206.34-40 17.99-25.46 26.8-53.79 26.8-86.52 0-43.83-16.27-81.35-48.43-111.4-33.12-31.02-79.25-45.37-124.42-38.67zm45.17 60.1c6.13 1.53 14.17 4.4 17.8 6.32l6.7 3.45-65.65 58.76c-35.98 32.35-66.03 58.19-66.8 57.42-3.06-3.06-7.47-24.69-7.47-35.98 0-41.54 28.9-79.05 69.1-89.77 13.59-3.65 32.73-3.84 46.32-.2zm66.61 65.46c4.21 14.36 3.06 41.34-2.1 55.13-14.55 38.09-48.23 62.21-87.09 62.21-12.44 0-30.05-3.83-39.43-8.61l-5.55-3.06 64.5-58c35.6-31.96 65.27-57.8 65.84-57.42.58.37 2.3 4.77 3.83 9.75z"/>
+    </svg>
   </div>
 
   <!-- Mostrar la lista de rutas -->
   <ul *ngIf="!isLoading && !errorMessage && routeHistory.length > 0" class="history-list">
     <li *ngFor="let route of routeHistory" class="history-item">
       <div class="route-info">
-        <p><strong>Origen:</strong> {{ route.origin_location }}</p>
-        <p><strong>Destino:</strong> {{ route.destination_location }}</p>
-        <p><strong>Nivel de Seguridad:</strong> {{ route.security_level | number: '1.0-2' }}</p>
-        <p><strong>Fecha:</strong> {{ route.created_at | date: 'short' }}</p>
+        <p><strong>Origin:</strong> {{ route.origin_location }}</p>
+        <p><strong>Destination:</strong> {{ route.destination_location }}</p>
+        <p><strong>Security Level:</strong> {{ route.security_level | number: '1.0-2' }}</p>
+        <p><strong>Date:</strong> {{ route.created_at | date: 'short' }}</p>
       </div>
       <div class="route-image">
         <img [src]="route.map_image_url" alt="Mapa estático de la ruta" />
@@ -32,6 +38,6 @@
 
   <!-- Mostrar un mensaje si no hay rutas en el historial -->
   <div *ngIf="!isLoading && !errorMessage && routeHistory.length === 0" class="no-history">
-    <p>No se encontraron rutas en tu historial.</p>
+    <p>No routes were found in your history.</p>
   </div>
 </div>
