--- a/src/app/feature/historial/pages/historial/historial.component.scss
+++ b/src/app/feature/historial/pages/historial/historial.component.scss
@@ -1,17 +1,46 @@
 .historial-container {
   padding: 20px;
-  max-width: 800px;
   margin: 0 auto;
   max-height: 100vh;
   overflow-y: auto;
+  overflow-x: hidden;
   /* Estilos para el desplazamiento */
   scrollbar-width: thin; /* Ancho del scroll para navegadores compatibles */
   scrollbar-color: #f0f0f0; /* Colores para la barra de desplazamiento */
+
+  .block-svg{
+    margin-top: 8px;
+    height: 210px;
+    width: 210px;
+  }
+  @media(min-width: 458px){
+    .block-svg{
+      height: 350px;
+      width: 350px;
+    }
+  }
+  @media(min-width: 640px){
+    .block-svg{
+      height: 500px;
+      width: 500px;
+    }
+  }
+  @media (min-width: 1024px) {
+    max-width: 800px;
+  }
 
   h2 {
     text-align: center;
     color: #234fa2;
     margin-bottom: 20px;
+  }
+
+  .error-message,
+  .no-history{
+    text-align: center;
+    font-size: 18px;
+    color: #d61a1a;
+    margin-top: 20px;
   }
 
 .loading-spinner{
