--- a/src/app/feature/historial/pages/historial/historial.component.scss
+++ b/src/app/feature/historial/pages/historial/historial.component.scss
@@ -26,7 +26,7 @@
     }
   }
   @media (min-width: 1024px) {
-    max-width: 800px;
+    max-width: 1000px;
   }
 
   h2 {
@@ -63,6 +63,7 @@
       border-radius: 8px;
       background-color: #f9f9f9;
       flex-wrap: wrap;
+      row-gap: 8px;
 
       .route-info {
         display: flex;
@@ -102,7 +103,6 @@
 
       .route-image {
         flex-shrink: 0; /* Evita que la imagen se reduzca demasiado */
-        max-width: 250px; /* Limita el ancho máximo de la imagen */
         width: 100%; /* Ajusta dinámicamente */
         img {
           width: 100%; /* Asegura que la imagen se ajuste al contenedor */
