--- a/src/app/feature/home/pages/home/home.component.html
+++ b/src/app/feature/home/pages/home/home.component.html
@@ -12,7 +12,7 @@
       <button type="submit">Buscar Ruta</button>
     </form>
     <!-- Historial Temporal -->
-    <app-search-container [searchHistory]="searchHistory"></app-search-container>
+    <app-search-container [searchHistory]="searchHistory" (searchRoute)="searchRoute($event)"></app-search-container>
   </div>
   <div class="map-container">
     <app-maps [originCoordinates]="originCoordinates" [destinationCoordinates]="destinationCoordinates" (routeGenerated)="onRouteGenerated($event)"></app-maps>
